--- a/client/src/components/header/styles/header.scss
+++ b/client/src/components/header/styles/header.scss
@@ -2,30 +2,35 @@
 @import "../../../partials/partials.scss";
 
 .header {
+  background-color: $graphite;
   h4 {
     margin: 0;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
   }
-
+  &__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   &__logo {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: $graphite;
-    width: 100vw;
+    width: 21.4375rem;
     height: 8.5rem;
   }
   &__nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 100%;
     color: $white;
   }
   &__warehouse {
-    font-family: Titillium Web Regular;
+    font-family: Titillium Web, sans-serif;
     color: $white;
     text-decoration: none;
-    width: 10.25rem;
     height: 2.25rem;
     display: flex;
     justify-content: center;
@@ -36,13 +41,13 @@
     &--active {
       background-color: $black;
       border-radius: 1.25rem;
+      width: 10.25rem;
     }
   }
   &__inventory {
-    font-family: Titillium Web Regular;
+    font-family: Titillium Web, sans-serif;
     color: $white;
     text-decoration: none;
-    width: 10.25rem;
     height: 2.25rem;
     display: flex;
     justify-content: center;
@@ -51,10 +56,22 @@
     &--active {
       background-color: $black;
       border-radius: 1.25rem;
+      width: 10.25rem;
     }
 
     &:hover {
       text-decoration: $white underline;
+    }
+  }
+  @include mobile {
+    &__logoImg {
+      margin-bottom: 1.5rem;
+    }
+    &__inventory {
+      width: 10.25rem;
+    }
+    &__warehouse {
+      width: 10.25rem;
     }
   }
   @include tablet {
@@ -63,21 +80,27 @@
       align-items: center;
       flex-direction: row;
       height: 5.75rem;
+      width: 44rem;
     }
     &__nav {
       width: auto;
-      padding-right: 2rem;
     }
-    &__logoImg {
-      padding-left: 2rem;
+    &__warehouse {
+      &--active {
+        width: 6.6875rem;
+        margin-right: 1.5rem;
+      }
+    }
+    &__inventory {
+      &--active {
+        width: 6.6875rem;
+        margin-left: 1.5rem;
+      }
     }
   }
   @include desktop {
-    &__logoImg {
-      padding-left: 48%;
-    }
-    &__nav {
-      padding-right: 6%;
+    &__logo {
+      width: 63.75rem;
     }
   }
 }
