--- a/client/src/partials/partials.scss
+++ b/client/src/partials/partials.scss
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: "Titillum Web Semi-Bold";
+  font-family: "Titillium Web Semi-Bold";
   src: url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap");
 }
 
@@ -15,9 +15,7 @@
 }
 
 @mixin tablet {
-
-@media screen and (min-width: 768px) {
-
+  @media screen and (min-width: 768px) {
     @content;
   }
 }
