--- a/client/src/pages/Warehouse/WarehousePage.scss
+++ b/client/src/pages/Warehouse/WarehousePage.scss
@@ -19,7 +19,7 @@
   }
   &__title {
     margin: 0rem;
-    font-family: Titillum Web, sans-serif;
+    font-family: Titillium Web, sans-serif;
     font-weight: 600;
     font-size: 1.75rem;
     line-height: 2.25rem;
