--- a/client/src/components/warehouse/WarehouseDetails.scss
+++ b/client/src/components/warehouse/WarehouseDetails.scss
@@ -4,6 +4,15 @@
 .WarehouseDetails {
   margin-right: 1rem;
 }
+p {
+  margin: 0;
+  font-size: 0.8125rem;
+}
+
+h3 {
+  color: #5c667e;
+  font-size: 0.6875rem;
+}
 
 .warehouse__name {
   display: flex;
