push with styling fix after last merge to main

--- a/client/src/components/inventories/InventoryDelete.scss
+++ b/client/src/components/inventories/InventoryDelete.scss
@@ -2,8 +2,7 @@
 @import "../../partials/partials.scss";
 
 .modal-custom {
-    background-color: green;
-    width: 10rem;
-    height: 50rem;
-    z-index: 3;
+
+    position: absolute;
+    //z-index: 2;
 }
