--- a/client/src/components/inventories/InventoryDelete.scss
+++ b/client/src/components/inventories/InventoryDelete.scss
@@ -3,6 +3,26 @@
 
 .modal-custom {
 
-    position: absolute;
-    //z-index: 2;
+    position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: $white;
+  z-index: 2;
+  outline: none;
+  width: 600px;
+   max-width: 100%;
+   height: 400px;
+   max-height: 100%;
+   z-index: 1010;
+}
+
+.modal-overlay{
+    z-index: 1000;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
