--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../partials/mixins.scss";
 @import "../../partials/partials.scss";
 
-footer {
+.footer-custom {
     background-color: $light-gray;
     display:flex;
     justify-content: center;
@@ -9,7 +9,7 @@ footer {
     height: 6rem; //96px   
 }
 
-small {
+.small-custom {
     font-family: "Titillium Web", sans-serif;
     color: $slate;
     font-size: 0.6875rem; //11px
