--- a/client/src/components/inventories/InventoryDelete.scss
+++ b/client/src/components/inventories/InventoryDelete.scss
@@ -1,28 +1,110 @@
 @import "../../partials/mixins.scss";
 @import "../../partials/partials.scss";
 
-.modal-custom {
 
-    position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: $white;
-  z-index: 2;
-  outline: none;
-  width: 600px;
+.modal-content {
+     // width: 23.4375rem; //375px;
    max-width: 100%;
-   height: 400px;
+   height: 40.4375rem; // 647px;
    max-height: 100%;
-   z-index: 1010;
+
+   @include tablet{
+       width: 672px;
+       height: 262px;
+   }
 }
 
-.modal-overlay{
-    z-index: 1000;
+.modal-header {  
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+display: flex;
+align-items: center;
+border-bottom: none !important;
+color: #13182C;
+
+@include tablet{
+    padding:0 !important;
+}
+}
+
+.modal-title.h4{
+    padding: 1.5625rem 1rem 0 1rem; //25px
+  /* M H1 */
+
+  font-family: Titillium Web;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 36px;
+  /* or 129% */
+
+  @include tablet{
+      font-size: 32px;
+      line-height: 40px;
+  }
+}
+
+.modal-body {
+    /* M P1 */
+
+font-family: Titillium Web;
+font-style: normal;
+font-weight: normal;
+font-size: 15px;
+line-height: 26px;
+color: $slate;
+
+@include tablet{
+    font-size: 16px;
+    line-height: 28px;
+}
+}
+
+.alert.alert-danger {
+   background-color: $white;
+   color: $slate;
+   border: none;
+   padding: 0;
+
+}
+
+.modal-footer {
+    border-top: none !important;
+    padding-bottom: 1.5rem !important;
+
+    @include tablet{
+        padding-bottom: 40px;
+    }
+}
+
+
+
+.rounded.btn.btn-default {
+background-color: $white;
+color: $slate;
+width: 10.1875rem; //163px;
+border: 1px solid $cloud;
+border-radius: 20px !important;
+margin-left: 0;
+margin-bottom: 0;
+
+@include tablet{
+    width: 72px;
+}
+
+&:hover {
+    border-radius: 1.25rem;
+    border: 1px solid $indigo;
+    outline: none;
+    color: $indigo;
+}  
+}
+
+.btn.btn-danger{
+    background-color: $red;
+    border-radius: 20px !important;
+
+    @include tablet{
+        width: 72px;
+        margin-left: 32px;
+    }
 }
