--- a/client/src/components/header/styles/header.scss
+++ b/client/src/components/header/styles/header.scss
@@ -37,6 +37,7 @@
     align-items: center;
     &:hover {
       text-decoration: underline;
+      color: $white;
     }
     &--active {
       background-color: $black;
@@ -60,7 +61,8 @@
     }
 
     &:hover {
-      text-decoration: $white underline;
+      text-decoration: underline;
+      color: $white;
     }
   }
   @include mobile {
