Revert "Miac41 cc 31"

--- a/client/src/components/header/styles/header.scss
+++ b/client/src/components/header/styles/header.scss
@@ -37,7 +37,6 @@
     align-items: center;
     &:hover {
       text-decoration: underline;
-      color: $white;
     }
     &--active {
       background-color: $black;
@@ -61,8 +60,7 @@
     }
 
     &:hover {
-      text-decoration: underline;
-      color: $white;
+      text-decoration: $white underline;
     }
   }
   @include mobile {
